# Math

./: CMakeLists.txt  CMakeSettings.json  Colors.hpp  Dimensions.hpp  Functions.hpp  Generated.PCMath.cpp  IncludeMemory.hpp  Level.hpp  Primitives.hpp  README.md  Randomness.hpp  Ranges.hpp  TAngle.hpp  TFraction.hpp  TGradient.hpp  TInstance.hpp  TInstance.inl  Times.cpp  Times.hpp  Vectors.hpp
.github/workflows/: ci.yml  dispatch.yml
Colors/: TColor.hpp  TColor.inl  TColorChannel.hpp
Functions/: Arithmetics.hpp  MathVerbs.hpp  Trigonometry.hpp
Matrices/: TMatrix.hpp  TMatrix.inl
Primitives/: APrimitive.hpp  TBox.hpp  TCone.hpp  TCylinder.hpp  TFrustum.hpp  TLine.hpp  TPlane.hpp  TPoint.hpp  TPolygon.hpp  TRay.hpp  TSphere.hpp  TTorus.hpp  TTriangle.hpp
Quaternions/: TQuaternion.hpp
Randomness/: Hashes.hpp  MersenneTwister.cpp  MersenneTwister.hpp
Ranges/: TRange.hpp
Vectors/: TForce.hpp  TNormal.hpp  TSampler.hpp  TSizer.hpp  TVector.hpp  TVector.inl  TVectorComponent.hpp
include/: LangulusMath.hpp  PCFW.Math.hpp
include/Math/: Angle.hpp  Blend.hpp  Color.hpp  Config.hpp  Gradient.hpp  Instance.hpp  LOD.hpp  Level.hpp  Mapping.hpp  Matrix.hpp  Normal.hpp  Number.hpp  Primitive.hpp  Primitives.hpp  Quaternion.hpp  Range.hpp  Sampler.hpp  Scale.hpp  SimplexNoise.hpp  Vector.hpp
include/Math/Primitives/: Box.hpp  Cylinder.hpp  Frustum.hpp  Line.hpp  Plane.hpp  Point.hpp  Sphere.hpp  Triangle.hpp
include/Math/Verbs/: Add.hpp  Cerp.hpp  Exponent.hpp  Lerp.hpp  Modulate.hpp  Move.hpp  Multiply.hpp  Randomize.hpp
source/: Adaptive.hpp  Adaptive.inl  Blend.hpp  Colors.hpp  Common.cpp  Common.hpp  Dimensions.hpp  Functions.hpp  Generated.PCMath.cpp  LOD.hpp  LOD.inl  Level.hpp  Mapping.hpp  Primitives.hpp  Randomness.hpp  Ranges.hpp  TFraction.hpp  TGradient.hpp  TGradient.inl  TInstance.hpp  TInstance.inl  Times.cpp  Times.hpp  Vectors.hpp
source/Colors/: TColor.cpp  TColor.hpp  TColor.inl  TColorChannel.hpp
source/Functions/: Arithmetics.hpp  MathVerbs.hpp  Trigonometry.hpp
source/Math/: Angles.hpp  Blend.hpp  Colors.hpp  Common.hpp  Dimensions.hpp  Gradients.hpp  LOD.hpp  LOD.inl  Mapping.hpp  Matrices.hpp  Numbers.hpp  Primitives.hpp  Quaternions.hpp  Randomness.hpp  Ranges.hpp  TInstance.hpp  TInstance.inl  Vectors.hpp  Verbs.hpp
source/Math/Colors/: TColor.hpp  TColor.inl
source/Math/Functions/: Arithmetics.hpp  MathVerbs.hpp  Trigonometry.hpp
source/Math/Matrices/: TMatrix.hpp  TMatrix.inl
source/Math/Numbers/: Level.hpp  Level.inl  TAngle.hpp  TAngle.inl  TNumber.hpp  TNumber.inl
source/Math/Primitives/: Primitive.hpp  TBox.hpp  TBox.inl  TCone.hpp  TCone.inl  TCylinder.hpp  TCylinder.inl  TFrustum.hpp  TFrustum.inl  TLine.hpp  TLine.inl  TPlane.hpp  TPlane.inl  TPoint.hpp  TPolygon.hpp  TRay.hpp  TSphere.hpp  TTorus.hpp  TTriangle.hpp
source/Math/Quaternions/: TQuaternion.hpp  TQuaternion.inl
source/Math/Randomness/: Hashes.hpp  MersenneTwister.hpp  SimplexNoise.hpp
source/Math/Ranges/: TRange.hpp
source/Math/SignedDistance/: TBox.inl  TBoxRounded.inl  TCone.inl  TCylinder.inl  TCylinderCapped.inl  TPlane.inl
source/Math/Vectors/: TForce.hpp  TForce.inl  TNormal.hpp  TNormal.inl  TSampler.hpp  TSampler.inl  TScale.hpp  TScale.inl  TVector.hpp  TVector.inl
source/Math/Verbs/: Add.hpp  Add.inl  Arithmetic.hpp  Arithmetic.inl  Cerp.hpp  Cerp.inl  Exponent.hpp  Exponent.inl  Lerp.hpp  Lerp.inl  Modulate.hpp  Modulate.inl  Move.hpp  Move.inl  Multiply.hpp  Multiply.inl  Randomize.hpp  Randomize.inl
source/Matrices/: TMatrix.hpp  TMatrix.inl
source/Numbers/: Infinity.hpp  Level.hpp  Level.inl  TAngle.cpp  TAngle.hpp  TAngle.inl  TColorChannel.hpp  TColorComponent.hpp  TNumber.cpp  TNumber.hpp  TNumber.inl  TVectorComponent.hpp
source/Primitives/: APrimitive.hpp  Primitive.cpp  Primitive.hpp  TBox.hpp  TBox.inl  TCone.hpp  TCone.inl  TCylinder.hpp  TCylinder.inl  TFrustum.hpp  TFrustum.inl  TLine.hpp  TLine.inl  TPlane.hpp  TPlane.inl  TPoint.hpp  TPolygon.hpp  TRay.hpp  TSphere.hpp  TTorus.hpp  TTriangle.hpp
source/Quaternions/: TQuaternion.hpp  TQuaternion.inl
source/Randomness/: Hashes.hpp  MersenneTwister.cpp  MersenneTwister.hpp  SimplexNoise.hpp
source/Ranges/: TRange.cpp  TRange.hpp  TRange.inl
source/SignedDistance/: TBox.inl  TBoxRounded.inl  TCone.inl  TCylinder.inl  TCylinderCapped.inl  TPlane.inl
source/Vectors/: TForce.hpp  TNormal.cpp  TNormal.hpp  TSampler.hpp  TScale.hpp  TSizer.hpp  TVector.cpp  TVector.hpp  TVector.inl  TVectorComponent.hpp
source/Verbs/: Add.hpp  Add.inl  Arithmetic.hpp  Arithmetic.inl  Cerp.hpp  Cerp.inl  Exponent.hpp  Exponent.inl  Lerp.hpp  Lerp.inl  Modulate.hpp  Modulate.inl  Move.hpp  Move.inl  Multiply.hpp  Multiply.inl  Randomize.hpp  Randomize.inl
test/: CMakeLists.txt  Common.hpp  Main.cpp  Main.hpp  TestConstructors.cpp  TestFlow.cpp  TestFunctions.cpp  TestGASM.cpp  TestMain.cpp  TestMain.hpp  TestMatrices.cpp  TestQuaternions.cpp  TestRTTI.cpp  TestRangeTypeCorrectness.cpp  TestSIMD.cpp  TestTypeCorrectness.cpp  TestTypes.cpp  TestVectorTypeCorrectness.cpp  TestVectors.cpp
